training/week6/kgateway/httproutes.yaml
# HTTPROUTES for each services

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: account-route
  namespace: banking
spec:
  parentRefs:
    - name: banking-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/accounts
      backendRefs:
        - name: account-service
          port: 3002

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: banking
spec:
  parentRefs:
    - name: banking-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transaction-route
  namespace: banking
spec:
  parentRefs:
    - name: banking-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/transactions
      backendRefs:
        - name: transaction-service
          port: 3003

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: user-route
  namespace: banking
spec:
  parentRefs:
    - name: banking-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/users
      backendRefs:
        - name: user-service
          port: 3001
